--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
+    "element-plus": "^2.8.4",
+    "mitt": "^3.0.1",
+    "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -30,7 +34,11 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
+    "sass": "^1.79.4",
+    "sass-loader": "^16.0.2",
     "typescript": "~5.4.0",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
   }
