--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
+    "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "prettier": "^3.2.5",
     "sass": "^1.79.4",
     "sass-loader": "^16.0.2",
