--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
+    "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
@@ -32,8 +33,9 @@
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "lib-flexible": "^0.3.2",
     "npm-run-all2": "^6.2.0",
-    "postcss-px-to-viewport-8-plugin": "^1.2.5",
+    "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.79.4",
     "sass-loader": "^16.0.2",
