--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vant/touch-emulator": "^1.4.0",
+    "amfe-flexible": "^2.2.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
@@ -22,8 +24,10 @@
     "mv-full-page": "^3.1.5",
     "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
+    "postcss-px-to-viewport": "^1.1.1",
     "swiper": "^11.1.14",
     "vant": "^4.9.7",
+    "vconsole": "^3.15.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
