--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@popperjs/core": "^2.11.8",
     "@vant/touch-emulator": "^1.4.0",
     "amfe-flexible": "^2.2.1",
@@ -29,7 +30,8 @@
     "vant": "^4.9.7",
     "vconsole": "^3.15.1",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-count-to": "^1.1.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
