--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@popperjs/core": "^2.11.8",
     "@vant/touch-emulator": "^1.4.0",
     "amfe-flexible": "^2.2.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
