--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
     "postcss-px-to-viewport": "^1.1.1",
+    "qrcodejs2": "^0.0.2",
     "scrollreveal": "^4.0.9",
     "swiper": "^11.1.14",
     "vant": "^4.9.7",
     "vconsole": "^3.15.1",
     "vue": "^3.4.29",
     "vue-baidu-map-3x": "^1.0.39",
+    "vue-qrcode": "^2.2.2",
     "vue-router": "^4.3.3",
+    "vue-social-sharing": "^4.0.0-alpha4",
     "vue3-count-to": "^1.1.2",
     "wowjs": "^1.1.3"
   },
